<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Temp Observer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_show_graph">Show Graph</string>
    <string name="menu_show_input_dialog">Input Temperature</string>
    <string name="note_input_temperature">Input Temperature:</string>
    <string name="button_save">Save</string>
    <string name="note_input_notes">Input Notes (optional):</string>
    <string name="button_cancel">Cancel</string>
    <string name="note_temperature">Temperature</string>
    <string name="table_consist">"Table consist "</string>
    <string name="records">records</string>
    <string name="cancelled">Cancelled</string>
    <string name="error_cannt_insert">Error. Cann\'t insert to DB.</string>
    <string name="new_data_inserted">New data inserted to:</string>
    <string name="to_record">" record."</string>
    <string name="selected_lang">You have selected English!</string>
    <string name="saved_locale">en</string>
    <string name="note_input_date">Select Date: </string>

    <string-array name="languages">
        <item>Select language</item>
        <item>English</item>
        <item>Ukrainian</item>
    </string-array>

</resources>
