<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.itirium.tempobserverjava.InputData"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvDate"
        android:text="@string/note_input_date"
        android:onClick="onclick"
        android:clickable="true"
        android:textSize="22sp"
        android:textAlignment="center"
        />
    <DatePicker
        android:id="@+id/datePicker"
        style="@android:style/Widget.DatePicker"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        android:datePickerMode="spinner"
        android:spinnersShown="true"
        />




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_input_temperature"
        android:textAlignment="center"
        android:textSize="22sp"
        />
    <EditText
        android:id="@+id/input_temp_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="36.5"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_margin="20dp"
        android:inputType="numberDecimal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_input_notes"
        android:textAlignment="center"
        android:textSize="22sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_notes_field"
        android:inputType="text"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_save"
        android:text="@string/button_save"
        android:textSize="25sp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_cancel"
        android:text="@string/button_cancel"
        android:textSize="25sp"/>
</LinearLayout>
